# Blink-Once__Employees-Productivity-System

./: .env.example  .gitignore  IMPs __ Env & APIs.txt  Prompt.txt  README.md  add_col.py  add_mock_tasks.py  auth.py  config.py  database.py  fix_history_columns_local.py  main.py  migrate_add_attendance.py  migrate_add_deadline_date.py  migrate_add_editing_type.py  migrate_add_employee_fields.py  migrate_dashboard.py  migrate_db.py  migrate_employee_features.py  migrate_ensure_employee_details_table.py  migrate_notifications_user_id.py  migrate_nullable_auth.py  models.py  pyproject.toml  recompute_db_workload.py  recreate_admin.py  remove_defer.py  requirements.txt  temp_inspect_office.py  temp_schema.py
Prompts/: 1_
public/: admin_add_employee.html  admin_attendance.html  admin_dashboard.html  admin_holidays.html  admin_leaves.html  admin_performance.html  admin_settings.html  admin_tasks.html  admin_view_employees.html  emp_attendance.html  emp_dashboard.html  emp_leaves.html  emp_productivity.html  emp_profile.html  employee_dashboard.html  employee_profile.html  login.html  register.html
routers/: admin.py  auth.py  employee.py
static/css/: style.css
static/js/: main.js  notification_badges.js  theme.js
templates/: admin_dashboard.html  admin_settings.html  base.html  employee_dashboard.html  login.html  register.html
tests/: test_employee_gps.py
